--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -6,7 +6,7 @@
     <title>Admin - MTP Food</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/admin_styles.css">
+    <link rel="stylesheet" href="css/admin_styles.css">
 </head>
 <body>
 
@@ -260,8 +260,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/admin_script.js"></script>
+<script src="js/config.js"></script>
+<script src="js/admin_script.js"></script>
 
 </body>
 </html>
