--- a/frontend/html/food-detail.html
+++ b/frontend/html/food-detail.html
@@ -6,7 +6,7 @@
     <title>Chi tiết món ăn - MTP Food</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/food_detail_styles.css">
+    <link rel="stylesheet" href="css/food_detail_styles.css">
 </head>
 <body>
 
@@ -130,8 +130,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../js/config.js"></script>
-<script src="../js/food_detail_script.js"></script>
+<script src="js/config.js"></script>
+<script src="js/food_detail_script.js"></script>
 
 </body>
 </html>
