--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,7 +7,7 @@
     <title>MTP Food - Nhà hàng cao cấp</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -433,8 +433,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/config.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
